--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -14,6 +14,7 @@
     "./convex/dataModel": "./src/convex/_generated/dataModel.js"
   },
   "devDependencies": {
+    "@types/node": "^24.3.1",
     "typescript": "^5.8.3"
   },
   "dependencies": {
