--- a/package.json
+++ b/package.json
@@ -13,6 +13,14 @@
     "turbo": "^2.5.6",
     "typescript": "5.9.2"
   },
+  "pnpm": {
+    "peerDependencyRules": {
+      "allowAny": [
+        "react",
+        "react-dom"
+      ]
+    }
+  },
   "packageManager": "pnpm@9.0.0",
   "engines": {
     "node": ">=18"
