--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "convex dev",
-    "dev:setup": "convex dev --configure --until-success"
+    "dev:setup": "convex dev --configure --until-success",
+    "test": "vitest --run"
   },
   "author": "",
   "license": "ISC",
@@ -15,7 +16,8 @@
   },
   "devDependencies": {
     "@types/node": "^24.3.1",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vitest": "^1.6.0"
   },
   "dependencies": {
     "convex": "^1.25.4",
